<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Home"
    android:background="@color/color1"
    android:orientation="vertical"
    android:id="@+id/homeDrawerLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar"
                app:title=""
                app:titleTextColor="@color/black"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_menu_drawer"
                        app:tint="@color/black"
                        android:id="@+id/home_drawer_click"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:fontFamily="@font/lato_regular"
                        android:layout_marginLeft="20dp"
                        android:textSize="18sp" />

                </LinearLayout>


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/home_swipe_refresh">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lato_bold"
                            android:text="@string/home_todays_date"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:layout_marginRight="2dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/home_todays_date"
                            android:fontFamily="@font/lato_bold"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:id="@+id/home_1_pm_click"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="7dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:weightSum="2"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.8"
                                android:id="@+id/home_1_pm_text"
                                android:text="@string/morning_1_pm_result_not_published_yet"
                                android:textColor="@color/color2"
                                android:gravity="center"
                                android:fontFamily="@font/lato_bold"
                                android:textSize="16sp"
                                android:layout_marginRight="10dp"/>

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="30dp"
                                android:layout_weight="0.2"
                                android:id="@+id/home_1_pm_img"
                                android:src="@drawable/ic_loading"/>
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:id="@+id/home_6_pm_click"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="7dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:weightSum="2"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.8"
                                android:id="@+id/home_6_pm_text"
                                android:text="@string/evening_6_pm_result_not_published_yet"
                                android:textColor="@color/color2"
                                android:gravity="center"
                                android:fontFamily="@font/lato_bold"
                                android:textSize="16sp"
                                android:layout_marginRight="10dp" />

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="30dp"
                                android:layout_weight="0.2"
                                android:id="@+id/home_6_pm_img"
                                android:src="@drawable/ic_loading"/>
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:id="@+id/home_8_pm_click"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="7dp"
                        android:layout_marginBottom="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:weightSum="2"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.8"
                                android:id="@+id/home_8_pm_text"
                                android:text="@string/night_8_pm_result_not_published_yet"
                                android:textColor="@color/color2"
                                android:gravity="center"
                                android:fontFamily="@font/lato_bold"
                                android:textSize="16sp"
                                android:layout_marginRight="10dp"/>

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="30dp"
                                android:layout_weight="0.2"
                                android:id="@+id/home_8_pm_img"
                                android:src="@drawable/ic_loading"/>
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/old_results"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:id="@+id/home_old_results_click"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="7dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/all_old_results"
                                android:textColor="@color/color2"
                                android:gravity="center"
                                android:fontFamily="@font/lato_regular"
                                android:textSize="18sp"
                                android:layout_marginRight="10dp"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <!--<androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:id="@+id/home_videos_click"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="7dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/live_draw_video"
                                android:textColor="@color/color2"
                                android:gravity="center"
                                android:fontFamily="@font/lato_regular"
                                android:textSize="18sp"
                                android:layout_marginRight="10dp"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:id="@+id/home_websites_click"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="50dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="7dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/website"
                                android:textColor="@color/color2"
                                android:gravity="center"
                                android:fontFamily="@font/lato_regular"
                                android:textSize="18sp"
                                android:layout_marginRight="10dp"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>-->


                </LinearLayout>
            </ScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/home_bottomBar_layout"
            android:background="@android:color/transparent">

            <me.ibrahimsn.lib.SmoothBottomBar
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/home_bottomBar"
                app:backgroundColor="@color/color26"
                app:textColor="@android:color/white"
                app:textSize="12sp"
                app:iconSize="18dp"
                app:indicatorColor="@color/color24"
                app:indicatorRadius="10dp"
                app:cornerRadius="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                app:corners="all"
                app:itemPadding="10dp"
                app:iconTint="@color/color25"
                app:iconTintActive="@color/white"
                app:menu="@menu/menu_bottom"/>

        </RelativeLayout>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/home_nav_View"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawar_top_layout"
        app:menu="@menu/navigation_menu"
        android:theme="@style/Widget.Custom.NavigationView"
        />

</androidx.drawerlayout.widget.DrawerLayout>